<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/login_txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="64dp"
        android:text="@string/txt_app_title"
        android:textSize="96sp"
        app:layout_constraintStart_toStartOf="@+id/login_edt_login"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/login_edt_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:ems="10"
        android:hint="@string/hint_edt_login"
        android:inputType="text"
        android:textColorHint="#A1887F"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/login_edt_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/login_edt_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_edt_password"
        android:inputType="textPassword"
        android:textColorHint="#A1887F"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/login_edt_login"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <CheckBox
        android:id="@+id/login_chk_keep_connected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:text="@string/hint_chk_keep_connected"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/login_edt_password"
        app:layout_constraintTop_toBottomOf="@+id/login_edt_password" />

    <Button
        android:id="@+id/login_btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="58dp"
        android:text="@string/txt_btn_login"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_chk_keep_connected" />

</androidx.constraintlayout.widget.ConstraintLayout>